2025-02-04  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* texmfmp.c: Avoid segmentation fault.
	https://github.com/texjporg/tex-jp-build/issues/174

2025-01-01  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

	* printversion.c: Update copyright year.

2024-04-14  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* Makefile.am: Remove eptex.

2024-01-01  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

	* printversion.c: Update copyright year.

2023-11-11  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

	* texmfmp.c: Order of lines was incorrect (windows only).

2023-08-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* texmfmp.c: Avoid compiler warning on MinGW.

2023-03-20  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

	* texmfmp.c: Typo, missing !IS_pTeX in ipcpage().

2023-03-09  Karl Berry  <karl@tug.org>

	* TL'23 release.

2023-01-01  Akira Kakuto  <kakuto@jcom.zaq.ne.jp>

	* printversion.c: Update copyright year.

2022-12-22  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* texmfmp.c:
	Accept file names with JIS X 0208 characters
	in `(e)(u)ptex --kanji-internal={euc,sjis}`.
	https://github.com/texjporg/tex-jp-build/issues/136

2022-06-12  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* texmfmp.c:
	Support guessing input file encodings for pTeX family.
	https://github.com/texjporg/tex-jp-build/issues/142

2022-04-25  Karl Berry  <karl@freefriends.org>

	* texmfmp.c (find_input_file): doc fix.

2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.

2022-03-08  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* texmfmp.c: Convert filename to utf8 in find_input_file for pTeX.
	  https://github.com/texjporg/tex-jp-build/issues/45

2022-03-03  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* texmfmp.c: Convert the argument of runpopen to utf8 for pTeX.
	  https://github.com/texjporg/tex-jp-build/issues/81

2022-01-22  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* openclose.c (open_input): Reencode nameoffile to utf8 for pTeX.
	* texmfmp.c: Change type of str_pool to unsigned short for pTeX.