@@ -531,6 +531,7 @@ shell_cmd_is_allowed (const char *cmd, char **safecmd, char **cmdname)
       *d++ = QUOTE;
     }
     *d = '\0';
+#if 0
 #ifdef WIN32
     {
       char *p, *q, *r;
@@ -568,6 +569,7 @@ shell_cmd_is_allowed (const char *cmd, char **safecmd, char **cmdname)
         }
       }
     }
+#endif
 #endif
   }
 
