@@ -474,6 +474,7 @@ int shell_cmd_is_allowed(const char *cmd, char **safecmd, char **cmdname)
             *d++ = QUOTE;
         }
         *d = '\0';
+#if 0
 #ifdef WIN32
         {
           char *p, *q, *r;
@@ -511,6 +512,7 @@ int shell_cmd_is_allowed(const char *cmd, char **safecmd, char **cmdname)
             }
           }
         }
+#endif
 #endif
     }
     return allow;
